# flintlock

./: .clang-format  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION.MD  IMPLEMENTATION_PLAN.md  SConstruct  flintlock.gdextension  install_godot_mcp.sh
demo/: example.gd  test_4d_scene.gd  test_physics_4d.gd
docs/: PHYSICS_SERVER_ARCHITECTURE.md
src/: register_types.cpp  register_types.h
src/collision/: broadphase_4d.cpp  broadphase_4d.h  gjk_4d.cpp  gjk_4d.h
src/dynamics/: body_state_4d.h  gravity_4d.cpp  gravity_4d.h  integrator_4d.cpp  integrator_4d.h
src/editor/: editor_plugin_4d.cpp  editor_plugin_4d.h  gizmo_plugin_4d.cpp  gizmo_plugin_4d.h  inspector_plugin_4d.cpp  inspector_plugin_4d.h  viewport_4d_panel.cpp  viewport_4d_panel.h
src/math/: aabb4d.cpp  aabb4d.h  basis4d.cpp  basis4d.h  bivector4d.cpp  bivector4d.h  hyperplane4d.cpp  hyperplane4d.h  math_4d.h  math_defs_4d.h  plane4d.cpp  plane4d.h  projection4d.cpp  projection4d.h  rotor4d.cpp  rotor4d.h  transform4d.cpp  transform4d.h  vector4d.cpp  vector4d.h
src/nodes/: animatable_body_4d.cpp  animatable_body_4d.h  area_4d.cpp  area_4d.h  camera_4d.cpp  camera_4d.h  character_body_4d.cpp  character_body_4d.h  collision_object_4d.cpp  collision_object_4d.h  collision_polygon_4d.cpp  collision_polygon_4d.h  collision_shape_4d.cpp  collision_shape_4d.h  cone_twist_joint_4d.cpp  cone_twist_joint_4d.h  generic10dof_joint_4d.cpp  generic10dof_joint_4d.h  geometry_instance_4d.cpp  (+23 more)
tests/: CMakeLists.txt  debug_rotor  debug_rotor.cpp  test_main.cpp
tests/collision/: test_broadphase_4d.cpp  test_gjk_4d.cpp
tests/dynamics/: test_gravity_4d.cpp  test_integrator_4d.cpp
tests/math/: test_aabb4d.cpp  test_basis4d.cpp  test_rotor4d.cpp  test_transform4d.cpp  test_vector4d.cpp
tests/server/: test_physics_server_4d.cpp
tests/shapes/: test_convex_hull_4d.cpp  test_hyper_box_shape_4d.cpp  test_hyper_capsule_shape_4d.cpp  test_hyper_ellipsoid_shape_4d.cpp  test_hyper_sphere_shape_4d.cpp
tests/slicer/: test_box_slice.cpp  test_hyperplane.cpp  test_sphere_slice.cpp
tests/support/: godot_compat.h
(+98 files in other folders)
